# FabricatedBook

./: CHANGELOG.md  CMakeLists.txt  game.c  player_info.txt  readme.md  test3.c  test_sdl.c  test_sdl2.c
tools/: Color.c  Color.h  Saves.c  Saves.h  button.c  button.h  card.c  card.h  collection.c  collection.h  events.c  events.h  fight.c  fight.h  gamecreater.c  gamecreater.h  map.c  map.h  nodes_event.c  nodes_event.h  shop.c  shop.h  videos.c  videos.h
